--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,12 +2,13 @@
   "extends": ["next/core-web-vitals", "prettier"],
   "plugins": ["prettier"],
   "rules": {
-    "prettier/prettier": "error",
-    "no-unused-vars": "error",
-    "prefer-const": "error",
-    "react-hooks/exhaustive-deps": "warn",
-    "react/jsx-key": "error",
-    "no-console": ["warn", { "allow": ["warn", "error"] }],
-    "no-var": "error"
+    "prettier/prettier": "off",
+    "no-unused-vars": "off",
+    "prefer-const": "off",
+    "react-hooks/exhaustive-deps": "off",
+    "react/jsx-key": "off",
+    "react/no-unescaped-entities": "off",
+    "no-console": "off",
+    "no-var": "off"
   }
 }
